[tool.poetry]
name = "stream-app"
version = "0.1.0"
description = "WebRTC Audio & Video Streaming App"
authors = ["davidcastilloalvarado <dcastilloa@uni.pe>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.52.2"
streamlit-webrtc = "^0.64.5"
av = "^16.0.1"
flask = "^3.1.2"
opencv-python = "^4.12.0.88"
flask-socketio = "^5.5.1"
python-socketio = "^5.15.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
