[tool.poetry]
name = "stream-app"
version = "0.1.0"
description = "WebRTC Audio & Video Streaming App"
authors = ["davidcastilloalvarado <dcastilloa@uni.pe>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.2"
flask-socketio = "^5.5.1"
python-socketio = "^5.15.1"
cachetools = "^6.2.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
